# ViLike

./: .gitignore  configure.ac  rebuild.sh
src/: '  App.cpp  App.h  Editor.cpp  Editor.h  EditorArea.cpp  EditorArea.h  MainWindow.cpp  MainWindow.h  Makefile.am  ReplWindow.cpp  ReplWindow.h  Search.cpp  Search.h  Vi.cpp  Vi.h  ViActions.cpp  ViActions.h  ViCommandMode.cpp  ViCommandMode.h  ViInsertMode.cpp  ViInsertMode.h  ViKeyManager.cpp  ViKeyManager.h  ViMotionAction.cpp  ViMotionAction.h  ViNormalMode.cpp  ViNormalMode.h  ViTextIter.cpp  ViTextIter.h  actions.cpp  actions.h  main.cc  s7.c  utils.cpp  utils.h
