AC_PREREQ(2.61)

AC_INIT([sourcerer], [0.0.1], [cnirrad@gmail.com])

AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
AM_MAINTAINER_MODE
AM_CONFIG_HEADER(config.h)

AC_ISC_POSIX
AC_PROG_CXX
AM_PROG_CC_STDC
AC_HEADER_STDC

PKG_CHECK_MODULES(SOURCERER, [gtkmm-2.4 >= 2.8])

AC_SUBST(SOURCERER_CFLAGS)
AC_SUBST(SOURCERER_LIBS)

AC_OUTPUT([
Makefile
src/Makefile
])
