
AM_CFLAGS = -Wall -g -O0

bin_PROGRAMS = sourcerer

sourcerer_SOURCES =  main.cc \
					 App.cpp \
					 MainWindow.cpp \
					 ViKeyManager.cpp \
					 actions.cpp \
					 utils.cpp \
					 ViActions.cpp \
					 ViTextIter.cpp \
					 Editor.cpp \
					 Search.cpp


sourcerer_LDFLAGS = 

AM_CPPFLAGS = $(GTKMM_CFLAGS)
sourcerer_LDADD = $(GTKMM_LIBS) 
